# secureassess

./: .gitignore  .vercelignore  LICENSE  Makefile  README.md  claude.md  deny.toml  docker-compose.yml  ngrok.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  socket.yml  turbo.json
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  pr-description.yml  release.yml  security-audit.yml
.vercel/: project.json
apps/admin/: .env.local.example  .env.production.local.example  .gitignore  eslint.config.mjs  middleware.ts  next.config.ts  package.json  vercel.json
apps/admin/app/: globals.css  layout.tsx  page.tsx
apps/admin/components/: ExportButtons.tsx  InviteDialog.tsx  PageHeader.tsx  QueryProvider.tsx  Sidebar.tsx
apps/admin/hooks/: useCurrentUser.ts
apps/admin/lib/: api.ts  auth-client.ts  auth.ts  export.ts
apps/admin/scripts/: create-admin-user.mjs  migrate-auth.mjs
apps/api/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  requirements.txt
apps/api/core/: better_auth.py  config.py  dependencies.py  logging.py  migrations.py  supabase.py
apps/api/migrations/: 000_full_schema.sql  001_evaluation_results.sql  002_question_submissions.sql  003_feature_expansion.sql  004_token_revocation.sql  005_session_token_link.sql  006_assessment_scheduling.sql  (+7 more)
apps/desktop/: .env.example  .env.production.example  .gitignore  index.html  package.json  tailwind.config.cjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.prod.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/db/: commands.rs  encryption.rs  migrations.rs  mod.rs  models.rs  schema.rs
apps/desktop/src-tauri/src/eval/: commands.rs  judge0.rs  local.rs  mod.rs  runtime_check.rs  types.rs
apps/desktop/src-tauri/src/security/: display.rs  fingerprint.rs  focus.rs  fullscreen_guard.rs  keyboard_hook.rs  kiosk.rs  mod.rs  processes.rs  types.rs
apps/desktop/src-tauri/src/sync/: integrity.rs  mod.rs  queue.rs  worker.rs
docs/: LOCAL_SETUP.md  NGROK_SETUP.md  TODO.md  architecture.md  commands.md
docs/commands/: README.md  building.md  database.md  deploy.md  development.md  judge0-ngrok.md  release.md  secrets.md  testing.md  utilities.md
docs/flows/: 01-candidate-auth-flow.md  02-pre-assessment-validation-flow.md  03-assessment-execution-flow.md  04-offline-sync-flow.md  05-code-execution-flow.md  06-submission-integrity-flow.md  07-crash-recovery-flow.md  08-admin-assessment-creation-flow.md  09-live-monitoring-flow.md  10-security-violation-flow.md  11-token-session-link-flow.md
docs/setup/: README.md  linux.md  mac.md
infra/judge0/: .gitignore  Dockerfile.arm64  docker-compose.yml  judge0.conf
scripts/: build-desktop-mac.sh  check-deps.sh  dev-stack.sh  get-ngrok-urls.sh  seed_admin.py  seed_assessment.py  seed_better_auth_admin.py  seed_data.py  seed_technical_assessment_wamolabs.py  seed_wamolabs_assessment.py  send_wamolabs_invites.py  serve-builds.sh  setup-env.sh  start-admin.sh  start-api.sh  start-desktop.sh  start-ngrok.sh
supabase/: config.toml
(+102 files in other folders)
