[package]
name = "app"
version = "0.17.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.39"
# cipher feature does not exist in tauri-plugin-sql; SQLCipher requires a custom build
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sha2 = "0.11"
hmac = "0.12"
hex = "0.4"
sqlx = { version = "0.9", features = ["sqlite", "runtime-tokio"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

# ── Known advisory: RUSTSEC-2024-0370 (glib VariantStrIter unsoundness) ──────
# glib 0.18.5 is a Linux-only transitive dependency pulled in by:
#   tauri → tauri-runtime-wry → wry → gtk / webkit2gtk → glib
# macOS builds (primary target) do NOT include this code path.
# Fix requires gtk-rs ecosystem upgrade to 0.20.x; blocked until wry/tauri
# publishes a release using the new gtk-rs stack.
# Acknowledged in deny.toml. Remove this comment when glib reaches 0.20+.
